--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <body style="margin:0;font-family:Arial, sans-serif;background:#f5f7fa;color:#333;">
   <section style="max-width:600px;margin:60px auto;padding:40px;background:#fff;box-shadow:0 4px 12px rgba(0,0,0,0.1);border-radius:12px;text-align:center;">
-    <h1 style="color:#039be5;font-size:28px;margin-bottom:16px;">Поддержка: Treuno (iOS) / Triuno (Android)</h1>
+    <h1 style="color:#039be5;font-size:28px;margin-bottom:16px;">Поддержка: Treuno (iOS & Android)</h1>
     <p style="font-size:16px;line-height:1.5;margin-bottom:30px;">
-      Это одно и то же приложение в разных сторах. Название отличается на одну букву.
+      Приложение Treuno доступно как в App Store (iOS), так и в Google Play (Android).
     </p>
-    <a href="mailto:gadzhi.usa1@gmail.com?subject=Поддержка%20Treuno/Triuno&body=Опишите%20вашу%20проблему%20или%20вопрос%20здесь."
+    <a href="mailto:gadzhi.usa1@gmail.com?subject=Поддержка%20Treuno&body=Опишите%20вашу%20проблему%20или%20вопрос%20здесь."
        style="display:inline-block;padding:14px 28px;background:#039be5;color:#fff;text-decoration:none;font-size:16px;font-weight:bold;border-radius:6px;transition:background 0.3s;">
       Обратиться в поддержку
     </a>
@@ -14,3 +14,4 @@
     link.addEventListener('mouseover', () => link.style.background = '#0288d1');
     link.addEventListener('mouseout', () => link.style.background = '#039be5');
   </script>
+</body>
